<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:keyWidth="10%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="10%p">

    <!-- Row1: Tab+q–p+Bksp. Equal width 1×12. Split mid=6: Tab+qwer+t | yuiop+Bksp. -->
    <Row>
        <Key android:codes="2B" android:keyLabel="@string/TAB" android:keyWidth="10%p" android:horizontalGap="1%p"/>
        <Key android:codes="14" android:keyLabel="q" custom:keySymbolLabel="Q" custom:keyAlternates="!,1" custom:keyCornerHint="!" android:keyWidth="10%p"/>
        <Key android:codes="1A" android:keyLabel="w" custom:keySymbolLabel="W" custom:keyAlternates="@,2" custom:keyCornerHint="@" android:keyWidth="10%p"/>
        <Key android:codes="08" android:keyLabel="e" custom:keySymbolLabel="E" custom:keyAlternates="#,3" custom:keyCornerHint="#" android:keyWidth="10%p"/>
        <Key android:codes="15" android:keyLabel="r" custom:keySymbolLabel="R" custom:keyAlternates="$,4" custom:keyCornerHint="$" android:keyWidth="10%p"/>
        <Key android:codes="17" android:keyLabel="t" custom:keySymbolLabel="T" custom:keyAlternates="%,5" custom:keyCornerHint="%" android:keyWidth="10%p"/>
        <Key android:codes="1C" android:keyLabel="y" custom:keySymbolLabel="Y" custom:keyAlternates="^,6" custom:keyCornerHint="^" android:keyWidth="10%p"/>
        <Key android:codes="18" android:keyLabel="u" custom:keySymbolLabel="U" custom:keyAlternates="&amp;,7" custom:keyCornerHint="&amp;" android:keyWidth="10%p"/>
        <Key android:codes="0C" android:keyLabel="i" custom:keySymbolLabel="I" custom:keyAlternates="*,8" custom:keyCornerHint="*" android:keyWidth="10%p"/>
        <Key android:codes="12" android:keyLabel="o" custom:keySymbolLabel="O" custom:keyAlternates=",9" custom:keyCornerHint="," android:keyWidth="10%p"/>
        <Key android:codes="13" android:keyLabel="p" custom:keySymbolLabel="P" custom:keyAlternates=".0" custom:keyCornerHint="." android:keyWidth="10%p"/>
        <Key android:codes="2A" android:keyLabel="@string/BackSpace" android:isRepeatable="true" android:keyWidth="10%p"/>
    </Row>

    <!-- Row2: Fn+a–l+Del (forward delete). Split (mid=6): left Fn+asdfg, right hjkl+Del. -->
    <Row>
        <Key android:codes="F005" android:keyLabel="Fn" android:keyWidth="9.5%p" android:horizontalGap="1.1%p"/>
        <Key android:codes="04" android:keyLabel="a" custom:keySymbolLabel="A" custom:keyAlternates="¥,,£,€" custom:keyCornerHint="¥" android:keyWidth="10.6%p"/>
        <Key android:codes="16" android:keyLabel="s" custom:keySymbolLabel="S" custom:keyAlternates=",,`,~" custom:keyCornerHint="`" android:keyWidth="8.35%p"/>
        <Key android:codes="07" android:keyLabel="d" custom:keySymbolLabel="D" custom:keyAlternates=",,-,_" custom:keyCornerHint="-" android:keyWidth="8.35%p"/>
        <Key android:codes="09" android:keyLabel="f" custom:keySymbolLabel="F" custom:keyAlternates=",,+,=" custom:keyCornerHint="+" android:keyWidth="8.35%p"/>
        <Key android:codes="0A" android:keyLabel="g" custom:keySymbolLabel="G" custom:keyAlternates=",,/,?" custom:keyCornerHint="/" android:keyWidth="8.35%p"/>
        <Key android:codes="0B" android:keyLabel="h" custom:keySymbolLabel="H" custom:keyAlternates=",,&lt;,&gt;" custom:keyCornerHint="&lt;" android:keyWidth="8.35%p"/>
        <Key android:codes="0D" android:keyLabel="j" custom:keySymbolLabel="J" custom:keyAlternates=",,[,]" custom:keyCornerHint="[" android:keyWidth="8.35%p"/>
        <Key android:codes="0E" android:keyLabel="k" custom:keySymbolLabel="K" custom:keyAlternates=",,{,}" custom:keyCornerHint="{" android:keyWidth="8.35%p"/>
        <Key android:codes="0F" android:keyLabel="l" custom:keySymbolLabel="L" custom:keyAlternates=",,(,)" custom:keyCornerHint="(" android:keyWidth="8.35%p"/>
        <Key android:codes="4C" android:keyLabel="@string/Delete" android:isRepeatable="true" android:keyWidth="11.55%p"/>
    </Row>

    <Row>
        <!-- Shift row: / aligned with KM Pro portrait built-in (symbol ?, alternates ?|); widths 16 : 9×7 : 9 : 12. -->
        <Key android:codes="E1" android:keyLabel="@string/Shift" android:keyWidth="16%p"/>
        <Key android:codes="1D" android:keyLabel="z" custom:keySymbolLabel="Z" custom:keyAlternates="',,," custom:keyCornerHint="'" android:keyWidth="9%p"/>
        <Key android:codes="1B" android:keyLabel="x" custom:keySymbolLabel="X" custom:keyAlternates="&#34;,,," custom:keyCornerHint="&#34;" android:keyWidth="9%p"/>
        <Key android:codes="06" android:keyLabel="c" custom:keySymbolLabel="C" custom:keyAlternates=";,,," custom:keyCornerHint=";" android:keyWidth="9%p"/>
        <Key android:codes="19" android:keyLabel="v" custom:keySymbolLabel="V" custom:keyAlternates=":,,," custom:keyCornerHint=":" android:keyWidth="9%p"/>
        <Key android:codes="05" android:keyLabel="b" custom:keySymbolLabel="B" custom:keyAlternates="/,,," custom:keyCornerHint="/" android:keyWidth="9%p"/>
        <Key android:codes="11" android:keyLabel="n" custom:keySymbolLabel="N" custom:keyAlternates="&#124;,,," custom:keyCornerHint="&#124;" android:keyWidth="9%p"/>
        <Key android:codes="10" android:keyLabel="m" custom:keySymbolLabel="M" custom:keyAlternates="\\,,," custom:keyCornerHint="\\" android:keyWidth="9%p"/>
        <Key android:codes="38" android:keyLabel="/" custom:keySymbolLabel="&#63;" custom:keyAlternates="@string/km_pro_no_gui_slash_key_alternates" custom:keyCornerHint="@string/km_pro_no_gui_slash_corner_hint" android:keyWidth="9%p"/>
        <Key android:codes="28" android:keyLabel="@string/Enter_Button" android:keyWidth="12%p"/>
    </Row>

    <!-- Generic target_os: no Fn on bottom; redistribute former Fn 14%. -->
    <Row>
        <Key android:codes="E0" android:keyLabel="@string/modifier_control" android:keyWidth="12%p"/>
        <Key android:codes="2C" android:keyLabel="@string/Space_Button" android:isRepeatable="true" android:keyWidth="53%p"/>
        <Key android:codes="E2" android:keyLabel="@string/Alt" android:keyWidth="12%p"/>
        <Key android:codes="E3" android:keyLabel="@string/Win" android:keyWidth="23%p"/>
    </Row>
</Keyboard>
