<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:keyWidth="10%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="10%p">

    <Row>
        <Key android:codes="14" android:keyLabel="q" android:keyWidth="14.285714%p" custom:keySymbolLabel="Q" custom:keyAlternates="!,1" custom:keyCornerHint="!"/>
        <Key android:codes="1A" android:keyLabel="w" android:keyWidth="9.523810%p" custom:keySymbolLabel="W" custom:keyAlternates="@,2" custom:keyCornerHint="@"/>
        <Key android:codes="08" android:keyLabel="e" android:keyWidth="9.523810%p" custom:keySymbolLabel="E" custom:keyAlternates="#,3" custom:keyCornerHint="#"/>
        <Key android:codes="15" android:keyLabel="r" android:keyWidth="9.523810%p" custom:keySymbolLabel="R" custom:keyAlternates="$,4" custom:keyCornerHint="$"/>
        <Key android:codes="17" android:keyLabel="t" android:keyWidth="9.523810%p" custom:keySymbolLabel="T" custom:keyAlternates="%,5" custom:keyCornerHint="%"/>
        <Key android:codes="1C" android:keyLabel="y" android:keyWidth="9.523810%p" custom:keySymbolLabel="Y" custom:keyAlternates="^,6" custom:keyCornerHint="^"/>
        <Key android:codes="18" android:keyLabel="u" android:keyWidth="9.523810%p" custom:keySymbolLabel="U" custom:keyAlternates="&amp;,7" custom:keyCornerHint="&amp;"/>
        <Key android:codes="0C" android:keyLabel="i" android:keyWidth="9.523810%p" custom:keySymbolLabel="I" custom:keyAlternates="*,8" custom:keyCornerHint="*"/>
        <Key android:codes="12" android:keyLabel="o" android:keyWidth="9.523810%p" custom:keySymbolLabel="O" custom:keyAlternates=",9" custom:keyCornerHint=","/>
        <Key android:codes="13" android:keyLabel="p" android:keyWidth="9.523810%p" custom:keySymbolLabel="P" custom:keyAlternates=".0" custom:keyCornerHint="."/>
    </Row>

    <Row>
        <Key android:codes="2B" android:keyLabel="@string/TAB" android:keyWidth="9.202455%p" android:horizontalGap="1%p"/>
        <Key android:codes="04" android:keyLabel="a" custom:keySymbolLabel="A" custom:keyAlternates="¥,,£,,€,,," custom:keyCornerHint="¥" android:keyWidth="10.224949%p"/>
        <Key android:codes="16" android:keyLabel="s" custom:keySymbolLabel="S" custom:keyAlternates=",,`,~" custom:keyCornerHint="`" android:keyWidth="8.793456%p"/>
        <Key android:codes="07" android:keyLabel="d" custom:keySymbolLabel="D" custom:keyAlternates=",,-,_" custom:keyCornerHint="-" android:keyWidth="8.793456%p"/>
        <Key android:codes="09" android:keyLabel="f" custom:keySymbolLabel="F" custom:keyAlternates=",,+,=" custom:keyCornerHint="+" android:keyWidth="8.793456%p"/>
        <Key android:codes="0A" android:keyLabel="g" custom:keySymbolLabel="G" custom:keyAlternates=",,/,?" custom:keyCornerHint="/" android:keyWidth="8.793456%p"/>
        <Key android:codes="0B" android:keyLabel="h" custom:keySymbolLabel="H" custom:keyAlternates=",,&lt;,&gt;" custom:keyCornerHint="&lt;" android:keyWidth="8.793456%p"/>
        <Key android:codes="0D" android:keyLabel="j" custom:keySymbolLabel="J" custom:keyAlternates=",,[,]" custom:keyCornerHint="[" android:keyWidth="8.793456%p"/>
        <Key android:codes="0E" android:keyLabel="k" custom:keySymbolLabel="K" custom:keyAlternates=",,{,}" custom:keyCornerHint="{" android:keyWidth="8.793456%p"/>
        <Key android:codes="0F" android:keyLabel="l" custom:keySymbolLabel="L" custom:keyAlternates=",,(,)" custom:keyCornerHint="(" android:keyWidth="8.793456%p"/>
        <Key android:codes="2A" android:keyLabel="@string/BackSpace" custom:keySymbolLabel="Del" android:isRepeatable="true" android:keyWidth="10.224949%p"/>
    </Row>

    <Row>
        <Key android:codes="E1" android:keyLabel="@string/Shift" android:keyWidth="13.636364%p"/>
        <Key android:codes="1D" android:keyLabel="z" custom:keySymbolLabel="Z" custom:keyAlternates="',,," custom:keyCornerHint="'" android:keyWidth="9.090909%p"/>
        <Key android:codes="1B" android:keyLabel="x" custom:keySymbolLabel="X" custom:keyAlternates="&#34;,,," custom:keyCornerHint="&#34;" android:keyWidth="9.090909%p"/>
        <Key android:codes="06" android:keyLabel="c" custom:keySymbolLabel="C" custom:keyAlternates=";,,," custom:keyCornerHint=";" android:keyWidth="9.090909%p"/>
        <Key android:codes="19" android:keyLabel="v" custom:keySymbolLabel="V" custom:keyAlternates=":,,," custom:keyCornerHint=":" android:keyWidth="9.090909%p"/>
        <Key android:codes="05" android:keyLabel="b" custom:keySymbolLabel="B" custom:keyAlternates="/,,," custom:keyCornerHint="/" android:keyWidth="9.090909%p"/>
        <Key android:codes="11" android:keyLabel="n" custom:keySymbolLabel="N" custom:keyAlternates="&#124;,,," custom:keyCornerHint="&#124;" android:keyWidth="9.090909%p"/>
        <Key android:codes="10" android:keyLabel="m" custom:keySymbolLabel="M" custom:keyAlternates="\\,,," custom:keyCornerHint="\\" android:keyWidth="9.090909%p"/>
        <Key android:codes="38" android:keyLabel="/" custom:keySymbolLabel="&#63;" custom:keyAlternates="@string/km_pro_no_gui_slash_key_alternates" custom:keyCornerHint="@string/km_pro_no_gui_slash_corner_hint" android:keyWidth="9.090909%p"/>
        <Key android:codes="28" android:keyLabel="@string/Enter_Button" android:keyWidth="13.636364%p"/>
    </Row>

    <Row>
        <Key android:codes="F005" android:keyLabel="Fn" android:keyWidth="14%p"/>
        <Key android:codes="E0" android:keyLabel="@string/modifier_control" android:keyWidth="10%p"/>
        <Key android:codes="2C" android:keyLabel="@string/Space_Button" android:isRepeatable="true" android:keyWidth="47%p"/>
        <Key android:codes="E2" android:keyLabel="@string/Alt" android:keyWidth="10%p"/>
        <Key android:codes="E3" android:keyLabel="@string/Win" android:keyWidth="19%p"/>
    </Row>
</Keyboard>
